[package]
name = "advent_of_calendar_2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1_1"
path = "src/bin/day1/part1/main.rs"

[[bin]]
name = "1_2"
path = "src/bin/day1/part2/main.rs"

[[bin]]
name = "2_1"
path = "src/bin/day2/part1/main.rs"

[[bin]]
name = "2_2"
path = "src/bin/day2/part2/main.rs"

[[bin]]
name = "3_1"
path = "src/bin/day3/part1/main.rs"

[[bin]]
name = "3_2"
path = "src/bin/day3/part2/main.rs"

[[bin]]
name = "4_1"
path = "src/bin/day4/part1/main.rs"

[[bin]]
name = "4_2"
path = "src/bin/day4/part2/main.rs"

[[bin]]
name = "5_1"
path = "src/bin/day5/part1/main.rs"

[[bin]]
name = "5_2"
path = "src/bin/day5/part2/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
